Fix: Use raw difficulty values for Net Diff display
The network difficulty was being converted to hashrate using:
  netHashrate = difficulty * 2^32 / 150

This created values in the quadrillions (e.g., 3.6e15) which are
orders of magnitude larger than pool hashrate (17-27 TH/s).

The purple Net Diff line was being drawn at the very top of the
chart, appearing flat and invisible because its scale was so
different from the pool data.

Fix:
- Use raw difficulty values (79 million range) instead of converting
- This puts Net Diff on a reasonable scale relative to pool hashrate
- The line will now be visible and show actual difficulty changes

Network hashrate conversion was mathematically correct but created
display issues. Raw difficulty is more appropriate for comparison.

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -2184,9 +2184,9 @@
             }
             networkDiffSamples.forEach(function(sample) {
                 var sampleTime = sample.ts * 1000;
-                // Don't filter - backend already provides correctly bounded data with gap filling
-                var netHashrate = sample.network_diff * Math.pow(2, 32) / 150; // 150s avg block time for Dash
-                netDiffData.push([sampleTime, netHashrate]);
+                // Use raw difficulty value (not converted to hashrate)
+                // Network hashrate would be too large to display on same scale as pool
+                netDiffData.push([sampleTime, sample.network_diff]);
             });
             console.log('Net Diff data points:', netDiffData.length);
             if (netDiffData.length > 0) {
@@ -2753,9 +2753,9 @@
             }
             networkDiffSamples.forEach(function(sample) {
                 var sampleTime = sample.ts * 1000;
-                // Don't filter - backend already provides correctly bounded data with gap filling
-                var netHashrate = sample.network_diff * Math.pow(2, 32) / 150; // 150s avg block time for Dash
-                netDiffData.push([sampleTime, netHashrate]);
+                // Use raw difficulty value (not converted to hashrate)
+                // Network hashrate would be too large to display on same scale as pool
+                netDiffData.push([sampleTime, sample.network_diff]);
             });
             if (netDiffData.length > 0) {
                 console.log('Fullscreen - Net Diff data points:', netDiffData.length);
