Add merged mining UI support and fix currency symbols
- Add miner_stats and miner_payouts API endpoints for individual miner pages
- Add merged_payouts field to miner_stats showing DOGE earnings per miner
- Add merged_current_payouts graph datastream for payout history tracking
- Update miner.html with merged mining rewards section and dual-axis payout chart
- Update miners.html to show DOGE payouts alongside LTC for each miner
- Fix dynamic currency symbols (replace hardcoded DASH with LTC from API)
- Remove Dash-specific Master Node/Treasury text from dashboard
- Add pseudoshare_received trigger for P2Pool shares to fix per-miner hashrate graphs
- Rename Payout History to Predicted Payout History for clarity

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -1031,8 +1031,8 @@
                 <!-- Second Row: Miners Block Value -->
                 <div class="stat-card">
                     <h3><span class="icon">💰</span> Miners Block Value</h3>
-                    <div class="stat-value warning"><span id="block_value_miner">-</span> <small class="symbol-small">DASH</small></div>
-                    <div class="stat-sub">Total: <span id="block_value">-</span> (Master Node/Treasury: <span id="block_value_payments">-</span>)</div>
+                    <div class="stat-value warning"><span id="block_value_miner">-</span> <small class="symbol-small">LTC</small></div>
+                    <div class="stat-sub">Total Block Reward: <span id="block_value">-</span></div>
                     <div class="stat-detail">Expected Block: <span id="time_to_block">-</span></div>
                 </div>
                 
