Add P2P connections to merged mining broadcaster
- MergedMiningBroadcaster now maintains P2P connections to Dogecoin nodes
- Bootstraps peers from dogecoind via getpeerinfo (same as parent chain)
- Discovers additional peers via P2P addr messages
- Broadcasts blocks via both RPC AND P2P for faster propagation
- Connections established BEFORE blocks are found (ready when needed)
- Updated dashboard stats to show active P2P connections
- Pass dogecoin network config to enable P2P protocol magic bytes

--- a/web-static/dashboard.html
+++ b/web-static/dashboard.html
@@ -2393,6 +2393,10 @@
                     
                     tr.append('td').html(function(p) { 
                         var addr = p.address;
+                        // Truncate long addresses (IPv6)
+                        if (addr.length > 24) {
+                            addr = addr.substring(0, 20) + '...';
+                        }
                         if (p.protected) {
                             return addr + ' <span style="color: var(--success); font-size: 0.7rem;">[PROTECTED]</span>';
                         }
